--- a/styles/sections/contact/index.css
+++ b/styles/sections/contact/index.css
@@ -7,7 +7,7 @@ section.contact {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 100vw;
+  overflow: hidden;
 }
 
 /*Lg*/
